<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    tools:context=".GameActivity"
    android:orientation="vertical"
    android:id="@+id/view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="@style/ButtonXO"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn2"
            style="@style/ButtonXO" />

        <Button
            android:id="@+id/btn3"
            style="@style/ButtonXO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/ButtonXO" />

        <Button
            android:id="@+id/btn5"
            style="@style/ButtonXO" />

        <Button
            android:id="@+id/btn6"
            style="@style/ButtonXO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="@style/ButtonXO" />

        <Button
            android:id="@+id/btn8"
            style="@style/ButtonXO" />

        <Button
            android:id="@+id/btn9"
            style="@style/ButtonXO" />
    </LinearLayout>
    
</LinearLayout>