<resources>
    <string name="app_name">tic-tac-toe</string>
    <string name="NewGameButton">Новая игра</string>
    <string name="CountGamesText">Игр проведено:</string>
</resources>
